# well-intersection-calculator

./: .gitignore  README.md  pyproject.toml
src/: Model.py  TrajectoryProcessor.py  WellIntersectionCalculator.py  bilinear_interpolation.py  grid_math.py  main.py  spatial_geometry.py  trajectoryProcessor.py
src/model/: DataModel.py
test/: grid_math_test.py  hand_tests.py  parser.py  spatial_geometry.py  testInterpolation.py  trajectoryProcessor_test.py
unittest/: testInterpolation.py
