[tool.poetry]
name = "well-intersection-calculator"
version = "0.1.0"
description = ""
authors = ["Zdekh Kirill <zdekhKirill@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
